
Interface changes (aside from moving header files around)
======================================================================

(*) tie unpacked nodes to forests
    distinguish between "root" and "read only" unpacked nodes?

    (could do this in forest methods, returning const or not)

(*) node_storage::getDownPtr timing test

(*) One version of node_storage::getDownPtr, using edge_value


Go through examples/ directory,
see if some stuff can become test cases


Files that need updating / cleanup
------------------------------------------------------------
defines.h
enumerator.h            enumerator.cc
forest.h                forest.cc
hash_stream.h
heap.h
impl_unique_table.h     impl_unique_table.cc
loggers.h               loggers.cc
memory.h                memory.cc
opname.h                opname.cc
opname_numer.h          opname_numer.cc
opname_satur.h          opname_satur.cc

oper.h                  oper.cc
oper_binary.h           oper_binary.cc
oper_unary.h            oper_unary.cc

relation_node.h         relation_node.cc
