@@ -35,12 +35,12 @@ MEDDLY::generic_binary_mdd::generic_binary_mdd(binary_opname* code,
   expert_forest* arg1, expert_forest* arg2, expert_forest* res)
   : binary_operation(code, 1, arg1, arg2, res)
 {
-  ct_entry_type* et = new ct_entry_type(code->getName(), "NN:N");
-  et->setForestForSlot(0, arg1);
-  et->setForestForSlot(1, arg2);
-  et->setForestForSlot(3, res);
-  registerEntryType(0, et);
-  buildCTs();
+    ct_entry_type* et = new ct_entry_type(code->getName(), "NN:N");
+    et->setForestForSlot(0, arg1);
+    et->setForestForSlot(1, arg2);
+    et->setForestForSlot(3, res);
+    registerEntryType(0, et);
+    buildCTs();
 }
 
 MEDDLY::generic_binary_mdd::~generic_binary_mdd()
@@ -51,69 +51,71 @@ void MEDDLY::generic_binary_mdd::computeDDEdge(const dd_edge &a, const dd_edge &
   dd_edge &c, bool userFlag)
 {
 #ifdef TRACE_ALL_OPS
-  printf("computing Top %s(%d, %d)\n",
-    getName(), a.getNode(), b.getNode()
-  );
+    printf("computing Top %s(%d, %d)\n",
+        getName(), a.getNode(), b.getNode()
+    );
 #endif
-  node_handle cnode = compute(a.getNode(), b.getNode());
-  const int num_levels = resF->getMaxLevelIndex();
-  if ( userFlag && resF->isQuasiReduced() && cnode != resF->getTransparentNode()
-    && resF->getNodeLevel(cnode) < num_levels) {
-    node_handle temp = ((mt_forest*)resF)->makeNodeAtLevel(num_levels, cnode);
-    resF->unlinkNode(cnode);
-    cnode = temp;
-  }
+    node_handle cnode = compute(a.getNode(), b.getNode());
+    const int num_levels = resF->getMaxLevelIndex();
+    if ( userFlag && resF->isQuasiReduced() && cnode != resF->getTransparentNode()
+        && resF->getNodeLevel(cnode) < num_levels)
+    {
+        node_handle temp = ((mt_forest*)resF)->makeNodeAtLevel(num_levels, cnode);
+        resF->unlinkNode(cnode);
+        cnode = temp;
+    }
 #ifdef TRACE_ALL_OPS
-  printf("completed Top %s(%d, %d) = %d\n",
-    getName(), a.getNode(), b.getNode(), cnode);
+    printf("completed Top %s(%d, %d) = %d\n",
+        getName(), a.getNode(), b.getNode(), cnode);
 #endif
-  c.set(cnode);
+    c.set(cnode);
 #ifdef DEVELOPMENT_CODE
-  resF->validateIncounts(true);
+    resF->validateIncounts(true);
 #endif
 }
+
 
 MEDDLY::node_handle
 MEDDLY::generic_binary_mdd::compute(node_handle a, node_handle b)
 {
-  node_handle result = 0;
-  if (checkTerminals(a, b, result))
-    return result;
+    node_handle result = 0;
+    if (checkTerminals(a, b, result)) {
+        return result;
+    }
 
-  ct_entry_key* Key = findResult(a, b, result);
-  if (0==Key) {
+    ct_entry_key* Key = findResult(a, b, result);
+    if (!Key) {
 #ifdef TRACE_ALL_OPS
-    printf("computing %s(%d, %d), got %d from cache\n", getName(), a, b, result);
+        printf("computing %s(%d, %d), got %d from cache\n", getName(), a, b, result);
+        fflush(stdout);
+#endif
+
+        return result;
+    }
+
+#ifdef TRACE_ALL_OPS
+    printf("computing %s(%d, %d)\n", getName(), a, b);
+    fflush(stdout);
+#endif
+
+    // Get level information
+    const int aLevel = arg1F->getNodeLevel(a);
+    const int bLevel = arg2F->getNodeLevel(b);
+    const int resultLevel = MAX(aLevel, bLevel);
+
+    result = resF->isExtensibleLevel(resultLevel)
+        ? compute_ext(a, b)
+        : compute_normal(a, b);
+
+    // save result
+    saveResult(Key, a, b, result);
+
+#ifdef TRACE_ALL_OPS
+    printf("computed %s(%d, %d) = %d\n", getName(), a, b, result);
     fflush(stdout);
 #endif
 
     return result;
-  }
-
-#ifdef TRACE_ALL_OPS
-  printf("computing %s(%d, %d)\n", getName(), a, b);
-  fflush(stdout);
-#endif
-
-  // Get level information
-  const int aLevel = arg1F->getNodeLevel(a);
-  const int bLevel = arg2F->getNodeLevel(b);
-  const int resultLevel = MAX(aLevel, bLevel);
-
-  result =
-    resF->isExtensibleLevel(resultLevel)
-    ? compute_ext(a, b)
-    : compute_normal(a, b);
-
-  // save result
-  saveResult(Key, a, b, result);
-
-#ifdef TRACE_ALL_OPS
-  printf("computed %s(%d, %d) = %d\n", getName(), a, b, result);
-  fflush(stdout);
-#endif
-
-  return result;
 }
 
 MEDDLY::node_handle
@@ -149,7 +151,8 @@ MEDDLY::generic_binary_mdd::compute_normal(node_handle a, node_handle b)
 
   // do computation
   for (unsigned i=0; i<resultSize; i++) {
-    C->d_ref(i) = compute(A->down(i), B->down(i));
+      C->setFull(i, compute(A->down(i), B->down(i)));
+    // C->d_ref(i) = compute(A->down(i), B->down(i));
   }
 
   if (resF->isQuasiReduced()) {
@@ -158,7 +161,8 @@ MEDDLY::generic_binary_mdd::compute_normal(node_handle a, node_handle b)
       if (resF->getNodeLevel(C->down(i)) < nextLevel) {
         node_handle temp = ((mt_forest*)resF)->makeNodeAtLevel(nextLevel, C->down(i));
         resF->unlinkNode(C->down(i));
-        C->d_ref(i) = temp;
+        C->setFull(i, temp);
+        // C->d_ref(i) = temp;
       }
     }
   }
@@ -237,8 +241,9 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
     const node_handle b_d = ((j == B->index(B_curr_index))? B->down(B_curr_index++): 0);
     node_handle down = compute(a_d, b_d);
     if (down) {
-      C->d_ref(nnz) = down;
-      C->i_ref(nnz) = j;
+      C->setSparse(nnz, j, down);
+      // C->d_ref(nnz) = down;
+      // C->i_ref(nnz) = j;
       nnz++;
     }
   }
@@ -251,8 +256,9 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
     const node_handle a_d = ((j == A->index(A_curr_index))? A->down(A_curr_index++): 0);
     node_handle down = compute(a_d, B_ext_d);
     if (down) {
-      C->d_ref(nnz) = down;
-      C->i_ref(nnz) = j;
+      C->setSparse(nnz, j, down);
+      // C->d_ref(nnz) = down;
+      // C->i_ref(nnz) = j;
       nnz++;
     }
   }
@@ -260,8 +266,9 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
     const node_handle b_d = ((j == B->index(B_curr_index))? B->down(B_curr_index++): 0);
     node_handle down = compute(A_ext_d, b_d);
     if (down) {
-      C->d_ref(nnz) = down;
-      C->i_ref(nnz) = j;
+      C->setSparse(nnz, j, down);
+      // C->d_ref(nnz) = down;
+      // C->i_ref(nnz) = j;
       nnz++;
     }
   }
@@ -273,8 +280,9 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
   MEDDLY_DCASSERT(!C->isExtensible());  // default: not extensible
   if (C_is_extensible) {
     MEDDLY_DCASSERT(C_ext_d);
-    C->d_ref(nnz) = C_ext_d;
-    C->i_ref(nnz) = j;
+    C->setSparse(nnz, j, C_ext_d);
+    // C->d_ref(nnz) = C_ext_d;
+    // C->i_ref(nnz) = j;
     nnz++;
     C->markAsExtensible();
   }
@@ -290,7 +298,8 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
       if (resF->getNodeLevel(C->down(i)) < nextLevel) {
         node_handle temp = ((mt_forest*)resF)->makeNodeAtLevel(nextLevel, C->down(i));
         resF->unlinkNode(C->down(i));
-        C->d_ref(i) = temp;
+        // C->d_ref(i) = temp;
+        C->setSparse(i, C->index(i), temp);
       }
     }
   }
@@ -352,7 +361,8 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
   //
   int j = 0;
   for ( ; j < min_size; j++) {
-    C->d_ref(j) = compute(A->down(j), B->down(j));
+      C->setFull(j, compute(A->down(j), B->down(j)));
+    // C->d_ref(j) = compute(A->down(j), B->down(j));
   }
 
   //
@@ -360,10 +370,12 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
   // Loop 2: [min(a_last_index,b_last_index)+1, max(a_last_index,b_last_index)]
   //
   for ( ; j < A->getSize(); j++) {
-    C->d_ref(j) = compute(A->down(j), B_ext_d);
+    C->setFull(j, compute(A->down(j), B_ext_d));
+    // C->d_ref(j) = compute(A->down(j), B_ext_d);
   }
   for ( ; j < B->getSize(); j++) {
-    C->d_ref(j) = compute(A_ext_d, B->down(j));
+    C->setFull(j, compute(A_ext_d, B->down(j)));
+    // C->d_ref(j) = compute(A_ext_d, B->down(j));
   }
   MEDDLY_DCASSERT(j == max_size);
 
@@ -372,7 +384,8 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
   //
   MEDDLY_DCASSERT(!C->isExtensible());  // default: not extensible
   if (C_is_extensible) {
-    C->d_ref(j) = C_ext_d;
+    C->setFull(j, C_ext_d);
+   // C->d_ref(j) = C_ext_d;
     C->markAsExtensible();
   }
 
@@ -386,7 +399,8 @@ MEDDLY::generic_binary_mdd::compute_ext(node_handle a, node_handle b)
       if (resF->getNodeLevel(C->down(i)) < nextLevel) {
         node_handle temp = ((mt_forest*)resF)->makeNodeAtLevel(nextLevel, C->down(i));
         resF->unlinkNode(C->down(i));
-        C->d_ref(i) = temp;
+        C->setFull(i, temp);
+        // C->d_ref(i) = temp;
       }
     }
   }
